[package]
name = "gotham_examples_handlers_request_data"
description = "A basic application showing the request components available"
version = "0.0.0"
authors = ["Nicolas Pochet <npochet@gmail.com>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }
gotham_derive = { path = "../../../gotham_derive" }

hyper = "0.11"
mime = "0.3"
futures = "0.1"
serde_json = "1.0"